[gd_scene load_steps=32 format=3 uid="uid://bwggrf7sbmkcv"]

[ext_resource type="Script" path="res://Scripts/PlayerCharacter/PlayerCharacterScript.gd" id="1_5dbx1"]
[ext_resource type="Script" path="res://Scripts/PlayerCharacter/CameraScript.gd" id="2_x12n0"]
[ext_resource type="Script" path="res://Scripts/PlayerCharacter/UI/HUDScript.gd" id="4_f4mp1"]
[ext_resource type="PackedScene" uid="uid://dh3ln04ijax8n" path="res://Scenes/PauseMenuScene.tscn" id="6_3wmtt"]
[ext_resource type="Shader" path="res://Scenes/PlayerCharacterScene.gdshader" id="6_eg5bf"]
[ext_resource type="Texture2D" uid="uid://da3woq4q3j1cr" path="res://Arts/Textures/blood_splatter.png" id="7_0m3tf"]
[ext_resource type="Texture2D" uid="uid://djoe54ae3gp0a" path="res://Arts/Textures/kenney_prototype_textures/orange/texture_06.png" id="7_jclwn"]
[ext_resource type="Shader" path="res://Arts/Shaders/SpeedLinesShader.gdshader" id="12_8u6b8"]

[sub_resource type="Curve" id="Curve_qvv7t"]
max_value = 100.0
_data = [Vector2(0.17623, 15.0074), 0.0, 0.0, 0, 0, Vector2(0.286885, 23.6999), 0.0, 0.0, 0, 0, Vector2(0.55123, 58.8168), 0.0, 0.0, 0, 0, Vector2(0.870902, 99.0076), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_lh00s"]
max_value = 10.0
_data = [Vector2(0.245902, 8.66031), 0.0, 0.0, 0, 0, Vector2(0.577869, 7.86641), 0.0, 0.0, 0, 0, Vector2(0.901639, 6.97328), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n0b8a"]
albedo_texture = ExtResource("7_jclwn")

[sub_resource type="CylinderMesh" id="CylinderMesh_x05rw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5wmtp"]
albedo_color = Color(0.694118, 0.156863, 0.215686, 1)
metallic = 0.7
emission_enabled = true
emission = Color(0.694118, 0.156863, 0.215686, 1)
emission_energy_multiplier = 0.7

[sub_resource type="BoxMesh" id="BoxMesh_rsygy"]
material = SubResource("StandardMaterial3D_5wmtp")
size = Vector3(0.06, 0.2, 1.1)

[sub_resource type="Animation" id="Animation_rt7hc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_y4es4"]
resource_name = "useKnockbackTool"
length = 0.29
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.15, 0.29),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-3.06346e-09, 0, 0.0700839), Vector3(-3.06346e-09, 0, 0.0700839), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.15, 0.29),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0700401, 1.07436e-10, 3.06657e-09), Vector3(0.0700401, 1.07436e-10, 3.06657e-09), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hoq7f"]
_data = {
"RESET": SubResource("Animation_rt7hc"),
"useKnockbackTool": SubResource("Animation_y4es4")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5yjma"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1gb5t"]
height = 1.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6bkys"]
albedo_color = Color(0.196078, 0.223529, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_p2iaj"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_cdisy"]
frequency = 0.15

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_78nux"]
noise = SubResource("FastNoiseLite_cdisy")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fk5op"]
shader = ExtResource("12_8u6b8")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_count = 2.0
shader_parameter/line_density = 0.8
shader_parameter/line_faloff = 1.0
shader_parameter/mask_size = 0.1
shader_parameter/mask_edge = 0.8
shader_parameter/animation_speed = 20.0
shader_parameter/noise = SubResource("NoiseTexture2D_78nux")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_alyi7"]
shader = ExtResource("6_eg5bf")
shader_parameter/radius = 0.5
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ga166"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_top = 5
border_width_bottom = 5

[sub_resource type="LabelSettings" id="LabelSettings_02rm5"]
line_spacing = 5.0
font_size = 50
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0ffd"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_top = 5
border_width_bottom = 5

[sub_resource type="LabelSettings" id="LabelSettings_38hk4"]
line_spacing = 5.0
font_size = 50
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qe3yk"]
bg_color = Color(0.501961, 0.501961, 0.501961, 0.196078)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13xfk"]
bg_color = Color(0.752941, 0.172549, 0.172549, 1)

[node name="PlayerCharacter" type="CharacterBody3D" groups=["PlayerCharacter"]]
collision_layer = 2
floor_block_on_wall = false
floor_max_angle = 1.309
floor_snap_length = 0.0
platform_floor_layers = 4294901761
script = ExtResource("1_5dbx1")
desiredMoveSpeedCurve = SubResource("Curve_qvv7t")
maxSpeed = 80.0
walkSpeed = 11.0
runSpeed = 20.0
crouchSpeed = 7.0
slideSpeedAddon = 8.0
dashSpeed = 130.0
walkAcceleration = 10.0
runAcceleration = 8.0
crouchAcceleration = 6.0
walkDecceleration = 10.0
runDecceleration = 8.0
crouchDecceleration = 6.0
inAirMoveSpeedCurve = SubResource("Curve_lh00s")
hitGroundCooldown = 0.2
jumpHeight = 4.0
jumpTimeToPeak = 0.4
jumpTimeToFall = 0.35
jumpCooldown = 0.25
nbJumpsInAirAllowed = 1
coyoteJumpCooldown = 0.3
slideTime = 1.0
timeBeforeCanSlideAgain = 0.5
maxSlopeAngle = 10.0
wallJumpVelocity = 3.0
dashTime = 0.11
nbDashAllowed = 3
timeBefReloadDash = 0.6
grapHookMaxDist = 50.0
grapHookSpeed = 80.0
grapHookAccel = 6.0
distToStopGrappleOnFloor = 10.0
distToStopGrappleIAir = 5.0
timeBeforeCanGrappleAgain = 1.0
grappleLaunchJumpVelocity = 8.0
downDirJump = true
wallGravityMultiplier = 0.7
health = 500000
mass = 75

[node name="CameraHolder" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.540581, 0)
script = ExtResource("2_x12n0")
XAxisSensibility = 0.008
YAxisSensibility = 0.008
maxUpAngleView = -90.0
maxDownAngleView = 90.0
crouchCameraDepth = -0.2
crouchCameraLerpSpeed = 8.0
slideCameraDepth = -0.5
slideCameraLerpSpeed = 8.0
baseFOV = 90.0
crouchFOV = 75.0
runFOV = 100.0
slideFOV = 120.0
dashFOV = 150.0
fovChangeSpeed = 4.0
fovChangeSpeedWhenDash = 3.0
bobFrequency = 0.8
bobAmplitude = 0.06
camTiltRotationValue = 0.35
camTiltRotationSpeed = 2.2
shakeDuration = 0.35
shakeFade = 6.0
mouseInputSpeed = 2.0

[node name="Camera3D" type="Camera3D" parent="CameraHolder"]
cull_mask = 1
current = true
fov = 100.0
near = 0.01
far = 1000.0

[node name="GrappleHookCheck" type="RayCast3D" parent="CameraHolder/Camera3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -0.490764, 0)
target_position = Vector3(-10, 0, 0)
collision_mask = 5
collide_with_areas = true
debug_shape_custom_color = Color(0.721569, 0.337255, 0.0117647, 1)
debug_shape_thickness = 5

[node name="GrappleHookRope" type="Node3D" parent="CameraHolder/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.37114e-08, -0.540581, -1)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="CameraHolder/Camera3D/GrappleHookRope"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_n0b8a")
mesh = SubResource("CylinderMesh_x05rw")

[node name="ObjectTool" type="Node3D" parent="CameraHolder/Camera3D"]
visible = false

[node name="GrappleTool" type="MeshInstance3D" parent="CameraHolder/Camera3D/ObjectTool"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 5.94996e-08, -0.515336, -1.36119)
mesh = SubResource("BoxMesh_rsygy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CameraHolder/Camera3D/ObjectTool"]
libraries = {
"": SubResource("AnimationLibrary_hoq7f")
}

[node name="standingHitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_5yjma")

[node name="crouchingHitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0)
shape = SubResource("CapsuleShape3D_1gb5t")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
layers = 2
material_override = SubResource("StandardMaterial3D_6bkys")
mesh = SubResource("CapsuleMesh_p2iaj")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="standingHitbox2" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_5yjma")

[node name="Raycasts" type="Node3D" parent="."]

[node name="CeilingCheck" type="RayCast3D" parent="Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.758088, 0)
exclude_parent = false
target_position = Vector3(0, 4, 0)
collide_with_areas = true
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="FloorCheck" type="RayCast3D" parent="Raycasts"]
exclude_parent = false
target_position = Vector3(0, -4, 0)
collide_with_areas = true
debug_shape_custom_color = Color(0, 0, 0.956863, 1)

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("4_f4mp1")
metadata/_edit_use_anchors_ = true

[node name="Reticle" type="CenterContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TopLine" type="Line2D" parent="HUD/Reticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="BottomLine" type="Line2D" parent="HUD/Reticle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="RightLine" type="Line2D" parent="HUD/Reticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="LeftLine" type="Line2D" parent="HUD/Reticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="SpeedLinesContainer" type="ColorRect" parent="HUD"]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_fk5op")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="BloodContainer" type="TextureRect" parent="HUD"]
material = SubResource("ShaderMaterial_alyi7")
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("7_0m3tf")

[node name="SpeedUI" type="Label" parent="HUD"]
texture_filter = 1
layout_mode = 0
offset_left = 902.0
offset_top = 538.0
offset_right = 1122.0
offset_bottom = 618.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_ga166")
text = "..................."
label_settings = SubResource("LabelSettings_02rm5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckpointUI" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 230.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_l0ffd")
label_settings = SubResource("LabelSettings_38hk4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="HUD/CheckpointUI"]
texture_filter = 1
layout_mode = 0
offset_left = 154.0
offset_top = 53.0
offset_right = 200.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 15
text = "STAGE
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthUI" type="ProgressBar" parent="HUD"]
layout_mode = 0
offset_left = 907.0
offset_top = 498.0
offset_right = 1117.0
offset_bottom = 528.0
theme_override_styles/background = SubResource("StyleBoxFlat_qe3yk")
theme_override_styles/fill = SubResource("StyleBoxFlat_13xfk")
max_value = 500000.0
value = 500000.0
show_percentage = false

[node name="PauseMenu" parent="." instance=ExtResource("6_3wmtt")]
visible = false
